--- a/src/app/components/categorias/categorias.component.html
+++ b/src/app/components/categorias/categorias.component.html
@@ -33,7 +33,7 @@
 			<tr *ngFor="let dto of Lista">
 				<td>{{dto.IdCategoria}}</td>
 				<td>{{dto.Nombre | uppercase}}</td>
-				<td>{{dto.FechaAct | dd/MM/yy}}</td>
+				<td>{{dto.FechaAct}}</td>
 				<td>{{dto.CantEmpleados}}</td>
 			</tr>
 		</tbody>
