--- a/src/app/components/categorias/categorias.component.html
+++ b/src/app/components/categorias/categorias.component.html
@@ -32,7 +32,7 @@
 			<tr *ngFor="let dto of Lista">
 				<td>{{dto.IdCategoria}}</td>
 				<td>{{dto.Nombre | uppercase}}</td>
-				<td>{{dto.FechaAct}}</td>
+				<td>{{dto.FechaAct | date: 'dd/MM/yyyy'}}</td>
 				<td>{{dto.CantEmpleados}}</td>
 			</tr>
 		</tbody>
