--- a/src/app/components/categorias/categorias.component.html
+++ b/src/app/components/categorias/categorias.component.html
@@ -21,10 +21,10 @@
 	<table class="table table-bordered table-striped">
 		<thead>
 			<tr>
-				<th class="text-center">IdCategoria</th>
+				<th class="text-center">Id Categoria</th>
 				<th class="text-center">Nombre</th>
-				<th class="text-center">FechaAct</th>
-				<th class="text-center">CantEmpleados</th>
+				<th class="text-center">Fecha de Actividades</th>
+				<th class="text-center">Cantidad de Empleados</th>
 
 			</tr>
 		</thead>
