--- a/src/app/components/categorias/categorias.component.html
+++ b/src/app/components/categorias/categorias.component.html
@@ -68,7 +68,7 @@
 	<fieldset [disabled]="AccionABMC==='C'">
 		<!--campo Nombre-->
 		<div class="form-group row">
-			<label class="col-form-label col-sm-2 col-sm-offset-2" for="Nombre">Nombre <span
+			<label class="col-form-label col-sm-2 col-sm-offset-2" for="Nombre">Nombre: <span
                     class="text-danger">*</span></label>
 			<div class="col-sm-6">
 				<input type="text" class="form-control" formControlName="Nombre"
@@ -88,7 +88,7 @@
 
 		<!--campo FechaAct-->
 		<div class="form-group row">
-			<label class="col-form-label col-sm-2 col-sm-offset-2">Fecha de Actividad <span
+			<label class="col-form-label col-sm-2 col-sm-offset-2">Fecha de Actividad: <span
                     class="text-danger">*</span></label>
 			<div class="col-sm-6">
 				<input class="form-control"
@@ -110,7 +110,7 @@
 
 		<!--campo CantEmpleados-->
 		<div class="row form-group">
-			<label class="col-form-label col-sm-2 col-sm-offset-2" for="CantEmpleados">CantEmpleados <span
+			<label class="col-form-label col-sm-2 col-sm-offset-2" for="CantEmpleados">Cantidad de Empleados: <span
                     class="text-danger">*</span></label>
 			<div class="col-sm-6">
 				<input type="text" name="CantEmpleados" class="form-control" formControlName="CantEmpleados"
