--- a/src/app/components/categorias/categorias.component.html
+++ b/src/app/components/categorias/categorias.component.html
@@ -101,7 +101,7 @@
                     Dato requerido.
                 </span>
 				<span class="text-danger" *ngIf="FormReg.controls.FechaAct.errors?.pattern">
-                    Dato fecha, formato dd/mm/aaaa.
+                    Dato fecha, de ingresar el formato dd/mm/aaaa.
         </span>
 			</div>
 		</div>
